feat(common): added excluded line in file